# cad_pipeline

./: .bazelrc  BUILD.pmp.bazel  BUILD.ttf2mesh.bazel  MODULE.bazel  README.md  bazel-wasm_primes  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build_and_test.yaml
cad_pipeline/: BUILD.bazel  brep.h  cache.h  chamfer.h  cube.h  executor.h  extrude.h  file_writer.h  interpreter.h  main.cc  make_character.h  mesh.h  node.h  plane.h  planner.h  polygon.h  primitives.h  request.h  spatial_body.h  triangulate.h  types.h  visit_helper.h  write_stl.h
frontend/: BUILD.bazel  index.html
