load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "all_srcs",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)

cmake(
    name = "pmp",
    generate_args = [
        "-G Ninja",
        "-DPMP_SCALAR_TYPE=64",
        "-DPMP_BUILD_EXAMPLES=OFF",
        "-DPMP_BUILD_TESTS=OFF",
        "-DPMP_BUILD_DOCS=OFF",
        "-DPMP_BUILD_VIS=OFF",
        "-DBUILD_SHARED_LIBS=OFF",
    ],
    lib_name = "libpmp",
    lib_source = "@pmp//:all_srcs",
    visibility = ["//visibility:public"],
    deps = ["@eigen"],
)
