cc_library(
    name = "cad_pipeline",
    srcs = [
    ],
    hdrs = [
        "brep.h",
        "cache.h",
        "chamfer.h",
        "cube.h",
        "executor.h",
        "file_writer.h",
        "interpreter.h",
        "mesh.h",
        "plane.h",
        "polygon.h",
        "primitives.h",
        "spatial_body.h",
        "triangulate.h",
        "types.h",
        "visit_helper.h",
        "write_stl.h",
    ],
    deps = ["@pmp"],
)

cc_binary(
    name = "cad_binary",
    srcs = ["main.cc"],
    deps = [
        ":cad_pipeline",
    ],
)
