load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")
load("@npm//:http-server/package_json.bzl", http_server_bin = "bin")

http_server_bin.http_server_binary(
    name = "http-server",
)

js_run_devserver(
    name = "serve",
    args = [
        "--port",
        "8080",
        "-o",
        "/frontend/index.html?model=/$(location //cad_pipeline:make_model)",
    ],
    data = [
        "index.html",
        "main.css",
        "//cad_pipeline:make_model",
    ],
    tool = ":http-server",
    visibility = ["//visibility:public"],
)
